tests/baselines/reference/classWithOverloadImplementationOfWrongName(strict=true).errors.txt
classWithOverloadImplementationOfWrongName.ts(3,9): error TS7006: Parameter 'x' implicitly has an 'any' type.
classWithOverloadImplementationOfWrongName.ts(4,5): error TS2389: Function implementation name must be 'foo'.
classWithOverloadImplementationOfWrongName.ts(4,9): error TS7006: Parameter 'x' implicitly has an 'any' type.


==== classWithOverloadImplementationOfWrongName.ts (3 errors) ====
    class C {
        foo(): string;
        foo(x): number;
            ~
!!! error TS7006: Parameter 'x' implicitly has an 'any' type.
        bar(x): any { }
        ~~~
!!! error TS2389: Function implementation name must be 'foo'.
            ~
!!! error TS7006: Parameter 'x' implicitly has an 'any' type.
    }